--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../static/style/estilo.css">
     <title>Preguntica</title>
 </head>
 <body>
     <main>
         <div id="bloque">
             <div class="imagem">
-                <img src="PerfilLinkedin.jpg" alt="img">
+                <img src="../static/assets/PerfilLinkedin.jpg" alt="img">
             </div>
             
             <h1>¿Quieres compartir un mes al lado mio?</h1>
@@ -21,5 +21,5 @@
         </div>
     </main>
 </body>
-<script src="app.js"></script>
+<script src="../static/script/app.js"></script>
 </html>
