--- a/static/style/estilo.css
+++ b/static/style/estilo.css
@@ -14,7 +14,7 @@ a{
 
 #bloque2{
         display: none;
-        background-image: url('taylorBackground.jpg');
+        background-image: url('../assets/taylorBackground.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed; /* Opcional: fija la imagen de fondo */
@@ -56,7 +56,7 @@ a{
   }
 
 body{
-    background-image: url("514389.jpg");
+    background-image: url("../assets/514389.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     transition: 1s;
