--- a/templates/backgroundSwift.html
+++ b/templates/backgroundSwift.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body {
-            background-image: url('taylorBackground.jpg');
+            background-image: url('../static/assets/taylorBackground.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed; /* Opcional: fija la imagen de fondo */
@@ -14,12 +14,6 @@
     </style>
 </head>
 <body>
-    <audio id="myAudio">
-        <source src="lover-Song.mp3" type="audio/mpeg">
-    </audio>
+
 </body>
-<script>
-    const audio = document.getElementById("myAudio")
-    audio.play();
-</script>    
 </html>
