actualizacion de texto html

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <img src="../static/assets/PerfilLinkedin.jpg" alt="img">
             </div>
             
-            <h1>¿Quieres compartir un mes al lado mio?</h1>
+            <h1>¿Quieres compartir otro mes al lado mio?</h1>
            
                 <button type="button" id="opcion1" >Si, si quiero :)</button>
             
